--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,12 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+# JWT
+app.jwt.secret=super-secret-key-123456789-super-secret-key
+app.jwt.issuer=performance-review
+app.jwt.ttl-minutes=120
+
+
+
 # Optional
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
